// Vitest Snapshot v1

exports[`Upload 组件测试 > block 1`] = `
<div
  class="i-upload"
>
  <input
    style="display: none;"
    type="file"
  />
  
  <!--v-if-->
  <div
    class="i-upload__block"
  >
    <i
      class="i-icon icon-ThePlus"
      style="font-size: 20px;"
    />
     点击上传
  </div>
  <!--v-if-->
  
</div>
`;

exports[`Upload 组件测试 > create 1`] = `
<div
  class="i-upload"
>
  <input
    style="display: none;"
    type="file"
  />
  
  <button
    class="i-button i-button--type-info i-button--variant-outline"
  >
    <i
      class="i-icon icon-ArrowLineUpload i-button-icon"
    />
    
    点击上传
    
  </button>
  <!--v-if-->
  <!--v-if-->
  
</div>
`;

exports[`Upload 组件测试 > drag 1`] = `
<div
  class="i-upload"
>
  <input
    style="display: none;"
    type="file"
  />
  
  <!--v-if-->
  <!--v-if-->
  <div
    class="i-upload__drag"
    draggable=""
  >
    <i
      class="i-icon icon-ArrowLineUpload"
      style="font-size: 20px;"
    />
    <span
      class="i-upload-placeholder"
    >
      点击或拖动到框内上传
    </span>
    <span
      class="i-upload-tip"
    >
      支持不超过 10M 的 excel 类型文件
    </span>
  </div>
  
</div>
`;
